--- a/Huihui/Base.lproj/Main.storyboard
+++ b/Huihui/Base.lproj/Main.storyboard
@@ -760,15 +760,37 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="tbS-ri-1K0">
-                            <rect key="frame" x="0.0" y="671" width="320" height="0.0"/>
+                            <rect key="frame" x="0.0" y="706" width="320" height="0.0"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <sections>
+                            <tableViewSection id="IBk-xc-kI3">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="35" id="Pmk-hU-9ei">
+                                        <rect key="frame" x="0.0" y="224" width="320" height="35"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pmk-hU-9ei" id="KR2-Iu-Pb8">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="34"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="叫外卖" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZQ-VB-zS6">
+                                                    <rect key="frame" x="133" y="6" width="68" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                             <tableViewSection headerTitle="优惠说明" id="iTK-zY-n9H">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="iEZ-bk-7oY">
-                                        <rect key="frame" x="0.0" y="246" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="281" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iEZ-bk-7oY" id="Los-Zj-Yxa">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
@@ -801,7 +823,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="52" id="ZfF-0a-H4x">
-                                        <rect key="frame" x="0.0" y="306" width="320" height="52"/>
+                                        <rect key="frame" x="0.0" y="341" width="320" height="52"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZfF-0a-H4x" id="YmI-rl-ztl">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
@@ -813,7 +835,7 @@
                             <tableViewSection headerTitle="商家信息" id="Xbp-ib-GlT">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="90" id="dCC-jt-n8E">
-                                        <rect key="frame" x="0.0" y="380" width="320" height="90"/>
+                                        <rect key="frame" x="0.0" y="415" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dCC-jt-n8E" id="ldG-Yg-pes">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="89"/>
@@ -872,7 +894,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="2zJ-hQ-Pul">
-                                        <rect key="frame" x="0.0" y="470" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="505" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2zJ-hQ-Pul" id="YJK-oL-qq3">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -888,7 +910,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="45" id="44r-J1-R0h">
-                                        <rect key="frame" x="0.0" y="514" width="320" height="45"/>
+                                        <rect key="frame" x="0.0" y="549" width="320" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="44r-J1-R0h" id="Ybr-QB-fcN">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -914,7 +936,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="45" id="XF7-7y-BAe">
-                                        <rect key="frame" x="0.0" y="559" width="320" height="45"/>
+                                        <rect key="frame" x="0.0" y="594" width="320" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XF7-7y-BAe" id="S8H-ow-sa2">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -934,7 +956,7 @@
                             <tableViewSection headerTitle="       " id="tgs-0a-CJ4">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="45" id="hCI-f7-oTD">
-                                        <rect key="frame" x="0.0" y="626" width="320" height="45"/>
+                                        <rect key="frame" x="0.0" y="661" width="320" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hCI-f7-oTD" id="fyP-GS-eTB">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="44"/>
@@ -1655,7 +1677,7 @@
                                                         <outlet property="delegate" destination="wAR-Er-qVb" id="R54-fR-E2X"/>
                                                     </connections>
                                                 </textField>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="区号:如I区" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A2Y-S7-tH3">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="区号:如1区" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A2Y-S7-tH3">
                                                     <rect key="frame" x="128" y="39" width="97" height="23"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
